--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ jekyll-archives:
   enabled: all
   layout: archive
   permalinks:
-    category: '/:name/'
+    category: '/archives/:name/'
     year: '/:year/'
     month: '/:year/:month/'
     day: '/:year/:month/:day/'
