--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: ""
 url: ""
 # google_analytics: ''
 # disqus: ''
-# mailchimp-list: 'https://rotaract3190.us19.list-manage.com/subscribe/post?u=ec2994fa04b0856e3913be84e&amp;id=7eb0482b27'
+# mailchimp-list: ''
 
 # Plugins
 plugins: 
@@ -23,9 +23,9 @@ jekyll-archives:
   layout: archive
   permalinks:
     category: '/archives/:name/'
-    year: '/:year/'
-    month: '/:year/:month/'
-    day: '/:year/:month/:day/'
+    year: '/blog/:year/'
+    month: '/blog/:year/:month/'
+    day: '/blog/:year/:month/:day/'
     tag: '/authors/:name/'
     
 # Pagination 
@@ -34,5 +34,5 @@ paginate_path: /page:num/
 
 # Other
 markdown: kramdown
-permalink: /:year/:month/:day/:title/
+permalink: /blog/:year/:month/:day/:title/
 highlighter: rouge
