--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ logo: '/assets/images/logo.jpg'
 favicon: '/assets/images/logo.jpg'
 og_img: '/assets/images/logo_og.jpg'
 footer_img: '/assets/images/logo_footer.jpg'
-baseurl: "https://bangalore.python.org.in"
-url: ""
+baseurl: ""
+url: "https://bangalore.python.org.in"
 # google_analytics: ''
 # disqus: ''
 # mailchimp-list: ''
@@ -22,10 +22,10 @@ jekyll-archives:
   enabled: all
   layout: archive
   permalinks:
-    category: '/archives/:name/'
-    year: '/blog/:year/'
-    month: '/blog/:year/:month/'
-    day: '/blog/:year/:month/:day/'
+    category: '/:name/'
+    year: '/:year/'
+    month: '/:year/:month/'
+    day: '/:year/:month/:day/'
     tag: '/authors/:name/'
     
 # Pagination 
@@ -34,7 +34,7 @@ paginate_path: /page:num/
 
 # Other
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
 highlighter: rouge
 
 exclude: [vendor]
