--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,30 @@
-language: python
-python:
-  - '2.7'
-script: ./deploy
+language: ruby
+rvm:
+- 2.4.1
+ 
+script: 
+- bundle install
+- bundle exec jekyll build
+
+before_deploy:
+  - chmod +x deploy.sh
+
+deploy:
+  provider: script
+  script: ./deploy.sh
+  skip_cleanup: true
+
 env:
  global:
    - GH_REF: github.com/pythonindia/bangalore.python.org.in
    - secure: OOGn56dL/THfwy3y0desI7VsaaXL7TH8NcYiqcSB6Ew7P6jEc7Qu6fboP4IMBPBvyTUoIw1XYb/GS8rq4hEcB1vNqTEHZQuyx/+llUwG7+EuYCqU7RaS8n3DICTcuon2BL2czv0+gzMzeVRkc6uAcpsxcbGt+L2/+y4V9uoXtZA=
+   
+# if required to whitelist only master and disable builds on all other branch pushes
+
+# branches:
+#   only:
+#   - master
+
+sudo: false
+
+cache: bundler
