--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,22 +3,15 @@ bangpypers:
   display_name: BangPypers
   logo: /assets/images/authors/bangpypers.jpg
   email:  
-  web: 
+  web: https://bangalore.python.org.in
   twitter: https://www.meetup.com/BangPypers/
   description: "The Bangalore Python User Group"
 zeospec:
   name: ZeoSpec
   display_name: ZeoSpec
   logo: /assets/images/authors/zeospec.jpg
-  email:  
-  web: 
+  email: 
+  web: https://zeospec.com
   twitter: https://twitter.com/zeospec/
-  description: "ZeoSpec - Community explorer"
-test:
-  name: test
-  display_name: test
-  logo: /assets/images/authors/zeospec.jpg
-  email:  
-  web: 
-  twitter: https://twitter.com/zeospec/
-  description: "ZeoSpec - Community explorer"
+  description: "ZeoSpec - Community at Heart"
+
