--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,3 +16,11 @@ zeospec:
   web: https://zeospec.com
   twitter: https://twitter.com/zeospec/
   description: "ZeoSpec - Community at Heart"
+anistark:
+  name: Kumar Anirudha
+  display_name: Ani
+  logo: https://i.imgur.com/vVqT7PJ.jpg
+  email: anirudhastark@gmail.com
+  web: https://anirudha.org
+  twitter: https://twitter.com/kranirudha/
+  description: "Kumar Anirudha - Organiser"
