--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,10 +28,10 @@ abhiram:
 
 anistark:
   name: Kumar Anirudha
-  display_name: Ani
+  display_name: Anirudha
   logo: https://i.imgur.com/vVqT7PJ.jpg
-  email: anirudhastark@gmail.com
-  web: https://anirudha.org
+  email: mail@anirudha.dev
+  web: https://anirudha.dev
   twitter: https://twitter.com/kranirudha/
   description: "Kumar Anirudha - Co-Organiser"
 
